# opensquad

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml  test_ollama_integration.py
.github/workflows/: ci.yml
src/opensquad/: __init__.py  models.py
src/opensquad/agents/: __init__.py  architect.py  base.py  hello.py
src/opensquad/cli/: __init__.py  main.py
tests/: __init__.py  test_models.py
tests/agents/: test_architect.py  test_base.py  test_hello.py
